- Language-ID for network windows were wrong (fixed).
- Range for Network messages moved.
- same error-level for all shell-scripts "tool not found"
- Typo inside shell-scripts.
- Test if we use makemkvcon inside a script that the command is running.
- Typo inside dvd-handbrake.sh / text about passes fixed.
- In the case the +x attribut for the shell-scripts is not set, we set them for 
  all shell-scripts.
- Linebreaks for longer text inside dialog.ok function is needed.
- it seems that makemkv 1.6.0 had a few problems .... I do test version 1.6.1 now
- We should only have 1 bluray option file (thanks to dekani from xbmc.org forum)
- removed mpeg2 transcoding from svn ... (comes in later release) this has not a 
  important priority
- I have a brand-new dvd "Illuminati" that seems to be very good protected.
  A investigate more tests on this ....

  - dd copy .... error after 7 %
  - vobcopy error after 99 % 
  - Transcoding with handbrake  .... exception ....

  - rescue-copy do work but is very slow in execution.


----------------------------------------------------------------------------------------------------
Date : 10.08.2010 | Release : 0.6.16    | Author  : H.Weber | CVS:366
----------------------------------------------------------------------------------------------------

Changes:

- Implement a working-thread
- During a active job the main-process (dd/handbrake/makemkv( will be checked over 
  the worker-thread.
- After a successfull operation the dvd-drive will be opened
- Integrate worker-thread into dvd-iso.sh (testet successfully)
- Intergate worker-thread into dvd-resque.sh (testet successfully)
- Integrate worker-thread into dvd-vcopy.sh (testet successfully) 
- Integrate worker-thread into dvd-mkv.sh  (testet successfully) 
 
Fixes: 

- Typo inside german description addon.xml
- Fixed ugly bug with dvd-vcopy.sh and dvd volume-names 
  that have spaces inside the name (fixed and tested)
